# cpm

./: .gitignore  ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  cpm-dev.bat  pyproject.toml
src/cpm/: __init__.py  __main__.py  cli.py
src/cpm/clients/: __init__.py  base.py  registry.py
src/cpm/clients/managers/: __init__.py  claude_desktop.py  cline.py  continue_ext.py  cursor.py  goose.py  vscode.py  windsurf.py
src/cpm/commands/: __init__.py  add.py  cache.py  clients.py  config.py  group.py  info.py  init.py  init_v2.py  install.py  install_v2.py  link.py  ls.py  outdated.py  publish.py  remove.py  reset.py  run.py  search.py  search_v2.py  serve.py  settings.py  sync.py  uninstall.py  unlink.py  update.py  upgrade.py  validate.py  version.py
src/cpm/core/: __init__.py  adapter.py  config.py  context.py  local_config.py  lockfile.py  registry.py  registry_v2.py  resolver.py  schema.py
src/cpm/runtime/: __init__.py  executor.py.bak
src/cpm/ui/: __init__.py  config_tui.py
src/cpm/utils/: config_validator.py  prompts.py  semver.py  validators.py
tests/: conftest.py  test_config.py
